Debugging book_code.py and presenting  all cell outputs

--- a/Capítulo 18 - Herança.ipynb
+++ b/Capítulo 18 - Herança.ipynb
@@ -95,12 +95,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jack of Diamonds\n"
+     ]
+    }
+   ],
    "source": [
-    ">>> from book_code import Card # importado para mesclar células anteriores\n",
-    ">>> card1 = Card(2, 11)\n",
+    "from book_code import Card # importado para mesclar células anteriores\n",
+    ">>> card1 = Card(1, 11)\n",
     ">>> print(card1)"
    ]
   },
@@ -212,9 +220,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ace of Clubs\n",
+      "2 of Clubs\n",
+      "3 of Clubs\n",
+      "4 of Clubs\n",
+      "5 of Clubs\n",
+      "6 of Clubs\n",
+      "7 of Clubs\n",
+      "8 of Clubs\n",
+      "9 of Clubs\n",
+      "10 of Clubs\n",
+      "Jack of Clubs\n",
+      "Queen of Clubs\n",
+      "King of Clubs\n",
+      "Ace of Diamonds\n",
+      "2 of Diamonds\n",
+      "3 of Diamonds\n",
+      "4 of Diamonds\n",
+      "5 of Diamonds\n",
+      "6 of Diamonds\n",
+      "7 of Diamonds\n",
+      "8 of Diamonds\n",
+      "9 of Diamonds\n",
+      "10 of Diamonds\n",
+      "Jack of Diamonds\n",
+      "Queen of Diamonds\n",
+      "King of Diamonds\n",
+      "Ace of Hearts\n",
+      "2 of Hearts\n",
+      "3 of Hearts\n",
+      "4 of Hearts\n",
+      "5 of Hearts\n",
+      "6 of Hearts\n",
+      "7 of Hearts\n",
+      "8 of Hearts\n",
+      "9 of Hearts\n",
+      "10 of Hearts\n",
+      "Jack of Hearts\n",
+      "Queen of Hearts\n",
+      "King of Hearts\n",
+      "Ace of Spades\n",
+      "2 of Spades\n",
+      "3 of Spades\n",
+      "4 of Spades\n",
+      "5 of Spades\n",
+      "6 of Spades\n",
+      "7 of Spades\n",
+      "8 of Spades\n",
+      "9 of Spades\n",
+      "10 of Spades\n",
+      "Jack of Spades\n",
+      "Queen of Spades\n",
+      "King of Spades\n"
+     ]
+    }
+   ],
    "source": [
     "from book_code import Deck\n",
     ">>> deck = Deck()\n",
@@ -332,9 +399,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from book_code import Hand\n",
     ">>> hand = Hand('new hand')\n",
@@ -343,9 +421,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'new hand'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> hand.label"
    ]
@@ -359,9 +448,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "King of Spades\n"
+     ]
+    }
+   ],
    "source": [
     ">>> deck = Deck()\n",
     ">>> card = deck.pop_card()\n",
@@ -509,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,9 +625,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "book_code.Deck"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> hand = Hand()\n",
     ">>> find_defining_class(hand, 'shuffle')"
