Correcting missing return statement

--- a/Capítulo 19 - Extra.ipynb
+++ b/Capítulo 19 - Extra.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "```python\n",
     "def factorial(n):\n",
-    "     1 if n == 0 else n * factorial(n-1)```"
+    "     return 1 if n == 0 else n * factorial(n-1)```"
    ]
   },
   {
