Replaced page mentions for chapter/item mentions

--- a/Capítulo 06 - Funções com resultado.ipynb
+++ b/Capítulo 06 - Funções com resultado.ipynb
@@ -721,7 +721,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O fluxo de execução deste programa é semelhante ao fluxo de `countdown` em “Recursividade”, na página 81. Se chamarmos factorial com o valor 3:"
+    "O fluxo de execução deste programa é semelhante ao fluxo de `countdown` em “Recursividade”, no Capítulo 5. Se chamarmos `factorial` com o valor 3:"
    ]
   },
   {
@@ -790,7 +790,7 @@
     "\n",
     "Na verdade, você já está praticando este salto de fé quando usa funções integradas. Quando chama `math.cos` ou `math.exp`, você não examina o corpo dessas funções. Apenas supõe que funcionem porque as pessoas que as escreveram eram bons programadores.\n",
     "\n",
-    "O mesmo acontece ao chamar uma das suas próprias funções. Por exemplo, em “Funções booleanas”, na página 97, escrevemos uma função chamada `is_divisible` que determina se um número é divisível por outro. Uma vez que estejamos convencidos de que esta função está correta – examinando o código e testando – podemos usar a função sem ver o corpo novamente.\n",
+    "O mesmo acontece ao chamar uma das suas próprias funções. Por exemplo, em “Funções booleanas”, no Capítulo 5, escrevemos uma função chamada `is_divisible` que determina se um número é divisível por outro. Uma vez que estejamos convencidos de que esta função está correta – examinando o código e testando – podemos usar a função sem ver o corpo novamente.\n",
     "\n",
     "O mesmo é verdade para programas recursivos. Quando chega à chamada recursiva, em vez de seguir o fluxo de execução, você deveria supor que a chamada recursiva funcione (devolva o resultado correto) e então perguntar-se: “Supondo que eu possa encontrar o fatorial de n-1, posso calcular o fatorial de n?”. É claro que pode, multiplicando por n.\n",
     "\n",
@@ -962,7 +962,7 @@
     "\n",
     "Esse programa demonstra um padrão às vezes chamado de **guardião**. As duas primeiras condicionais atuam como guardiãs, protegendo o código que segue de valores que poderiam causar um erro. As guardiãs permitem comprovar a correção do código.\n",
     "\n",
-    "Na “Busca reversa”, na página 165, veremos uma alternativa mais flexível para a exibição de uma mensagem de erro: o levantamento de exceções.\n",
+    "Na “Busca reversa”, no Capítulo 11, veremos uma alternativa mais flexível para a exibição de uma mensagem de erro: o levantamento de exceções.\n",
     "\n"
    ]
   },
@@ -996,7 +996,7 @@
    "source": [
     "Para excluir a primeira possibilidade, você pode acrescentar uma instrução `print` no início da função e exibir os valores dos parâmetros (e talvez os seus tipos). Ou escrever código que verifique as precondições explicitamente.\n",
     "\n",
-    "Se os parâmetros parecerem bons, acrescente uma instrução `print` antes de cada instrução `return` e exiba o valor de retorno. Se possível, verifique o resultado à mão. Uma possibilidade é chamar a função com valores que facilitem a verificação do resultado (como no “Desenvolvimento incremental”, da página 94).\n",
+    "Se os parâmetros parecerem bons, acrescente uma instrução `print` antes de cada instrução `return` e exiba o valor de retorno. Se possível, verifique o resultado à mão. Uma possibilidade é chamar a função com valores que facilitem a verificação do resultado (como no “Desenvolvimento incremental”, do item 6.2).\n",
     "\n",
     "Se a função parecer funcionar, veja a chamada da função para ter certeza de que o valor de retorno está sendo usado corretamente (ou se está sendo usado mesmo!).\n",
     "\n",
