--- a/Capítulo 07 - Iteração.ipynb
+++ b/Capítulo 07 - Iteração.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este capítulo é sobre a iteração, a capacidade de executar um bloco de instruções repetidamente. Vimos um tipo de iteração, usando a recursividade, em “Recursividade”, na página 81. Vimos outro tipo, usando um loop `for`, em “Repetição simples”, na página 65. Neste capítulo veremos ainda outro tipo, usando a instrução `while`. Porém, primeiro quero falar um pouco mais sobre a atribuição de variáveis."
+    "Este capítulo é sobre a iteração, a capacidade de executar um bloco de instruções repetidamente. Vimos um tipo de iteração, usando a recursividade, em “Recursividade”, no Capítulo 5. Vimos outro tipo, usando um loop `for`, em “Repetição simples”, no Capítulo 4. Neste capítulo veremos ainda outro tipo, usando a instrução `while`. Porém, primeiro quero falar um pouco mais sobre a atribuição de variáveis."
    ]
   },
   {
@@ -224,7 +224,7 @@
    "source": [
     "Os computadores muitas vezes são usados para automatizar tarefas repetitivas. A repetição de tarefas idênticas ou semelhantes sem fazer erros é algo que os computadores fazem bem e as pessoas não. Em um programa de computador, a repetição também é chamada de **iteração**.\n",
     "\n",
-    "Já vimos duas funções, `countdown` e `print_n`, que se repetem usando recursividade. Como a iteração é bem comum, o Python fornece recursos de linguagem para facilitá-la. Um deles é a instrução `for` que vimos em “Repetição simples”, na página 65. Voltaremos a isso mais adiante.\n",
+    "Já vimos duas funções, `countdown` e `print_n`, que se repetem usando recursividade. Como a iteração é bem comum, o Python fornece recursos de linguagem para facilitá-la. Um deles é a instrução `for` que vimos em “Repetição simples”, no Capítulo 4. Voltaremos a isso mais adiante.\n",
     "\n",
     "Outra é a instrução `while`. Aqui está uma versão de `countdown` que usa a instrução `while`:"
    ]
@@ -292,7 +292,7 @@
     "\n",
     "A questão difícil é se podemos provar que este programa termina para todos os valores positivos de `n`. Por enquanto, ninguém foi capaz de comprovar ou refutar isso! (Veja http://en.wikipedia.org/wiki/Collatz\\_conjecture.)\n",
     "\n",
-    "Como um exercício, reescreva a função `print_n` de “Recursividade”, na página 81, usando a iteração em vez da recursividade."
+    "Como um exercício, reescreva a função `print_n` de “Recursividade”, no Capítulo 5, usando a iteração em vez da recursividade."
    ]
   },
   {
@@ -677,7 +677,7 @@
    "source": [
     "### Exercício 7.1\n",
     "\n",
-    "Copie o loop de “Raízes quadradas”, na página 111, e encapsule-o em uma função chamada `mysqrt` que receba a como parâmetro, escolha um valor razoável de `x` e devolva uma estimativa da raiz quadrada de `a`.\n",
+    "Copie o loop de “Raízes quadradas”, no item 7.5, e encapsule-o em uma função chamada `mysqrt` que receba a como parâmetro, escolha um valor razoável de `x` e devolva uma estimativa da raiz quadrada de `a`.\n",
     "\n",
     "Para testar, escreva uma função denominada `test_square_root`, que exibe uma tabela como esta:"
    ]
