--- a/Capítulo 08 - Strings.ipynb
+++ b/Capítulo 08 - Strings.ipynb
@@ -1026,7 +1026,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A primeira instrução `if` verifica se as palavras têm o mesmo comprimento. Se não for o caso, podemos retornar `False` imediatamente. Do contrário, para o resto da função, podemos supor que as palavras tenham o mesmo comprimento. Este é um exemplo do modelo guardião em “Verificação de tipos”, na página 101.\n",
+    "A primeira instrução `if` verifica se as palavras têm o mesmo comprimento. Se não for o caso, podemos retornar `False` imediatamente. Do contrário, para o resto da função, podemos supor que as palavras tenham o mesmo comprimento. Este é um exemplo do modelo guardião em “Verificação de tipos”, no Capítulo 6.\n",
     "\n",
     "`i` e `j` são índices: `i` atravessa `word1` para a frente, enquanto `j` atravessa `word2` para trás. Se encontrarmos duas letras que não combinam, podemos retornar `False` imediatamente. Se terminarmos o _loop_ inteiro e todas as letras corresponderem, retornamos `True`.\n",
     "\n",
@@ -1218,7 +1218,7 @@
     "\n",
     "### Exercício 8.2\n",
     "\n",
-    "Há um método de string chamado `count`, que é semelhante à função em “_Loop_ e contagem”, na página 123. Leia a documentação deste método e escreva uma invocação que conte o número de letras `'a'` em 'banana'.\n",
+    "Há um método de string chamado `count`, que é semelhante à função em “_Loop_ e contagem”, no item 8.7. Leia a documentação deste método e escreva uma invocação que conte o número de letras `'a'` em 'banana'.\n",
     "\n",
     "### Exercício 8.3\n",
     "\n",
