--- a/Capítulo 11 - Dicionários.ipynb
+++ b/Capítulo 11 - Dicionários.ipynb
@@ -293,7 +293,7 @@
    "source": [
     "O operador `in` usa algoritmos diferentes para listas e dicionários. Para listas, ele procura os elementos da lista em ordem, como descrito em “Busca”, Seção 8.6. Conforme a lista torna-se mais longa, o tempo de busca também fica proporcionalmente mais longo.\n",
     "\n",
-    "Para dicionários, o Python usa um algoritmo chamado **hashtable** (tabela de dispersão), que tem uma propriedade notável: o operador `in` leva praticamente o mesmo tempo na busca, não importa quantos itens estejam no dicionário. Eu explico como isso é possível em “Hashtables”, na página 302, mas a explicação pode não fazer sentido até que você tenha lido mais alguns capítulos."
+    "Para dicionários, o Python usa um algoritmo chamado **hashtable** (tabela de dispersão), que tem uma propriedade notável: o operador `in` leva praticamente o mesmo tempo na busca, não importa quantos itens estejam no dicionário. Eu explico como isso é possível em “Hashtables”, no anexo B, mas a explicação pode não fazer sentido até que você tenha lido mais alguns capítulos."
    ]
   },
   {
@@ -1090,7 +1090,7 @@
     "Outro tipo de verificação compara os resultados de dois cálculos diferentes para ver se são consistentes. Isso é chamado de “verificação de consistência”. <p>\n",
     "\n",
     "**Formate a saída:**<p>\n",
-    "> A formatação da saída para depuração pode facilitar a busca de erros. Vimos um exemplo em “Depuração”, na página 172. O módulo `pprint` apresenta uma função `pprint` que exibe tipos integrados em um formato mais legível para humanos (`pprint` é a abreviação de *“pretty print”* (bela exibição)).\n",
+    "> A formatação da saída para depuração pode facilitar a busca de erros. Vimos um exemplo em “Depuração”, no Capítulo 6. O módulo `pprint` apresenta uma função `pprint` que exibe tipos integrados em um formato mais legível para humanos (`pprint` é a abreviação de *“pretty print”* (bela exibição)).\n",
     "Reforçando, o tempo que você passar construindo o _scaffolding_ (o andaime) pode reduzir o tempo de depuração."
    ]
   },
