--- a/Capítulo 12 - Tuplas.ipynb
+++ b/Capítulo 12 - Tuplas.ipynb
@@ -1281,7 +1281,7 @@
     "\n",
     "Mais anagramas!\n",
     "\n",
-    "1. Escreva um programa que leia uma lista de palavras de um arquivo (veja “Leitura de listas de palavras”, na página 133) e imprima todos os conjuntos de palavras que são anagramas.\n",
+    "1. Escreva um programa que leia uma lista de palavras de um arquivo (veja “Leitura de listas de palavras”, no Capítulo 9) e imprima todos os conjuntos de palavras que são anagramas.\n",
     "\n",
     "        Aqui está um exemplo de como a saída pode parecer:\n",
     "\n",
