--- a/Capítulo 13 - Estudo de Caso -  Seleção de Estruturas de Dados.ipynb
+++ b/Capítulo 13 - Estudo de Caso -  Seleção de Estruturas de Dados.ipynb
@@ -547,7 +547,7 @@
     "\n",
     "### Exercício 13.6\n",
     "\n",
-    "O Python fornece uma estrutura de dados chamada `set`, que fornece muitas operações de conjunto. Você pode ler sobre elas em “Conjuntos”, na página 274, ou ler a documentação em http://docs.python.org/3/library/stdtypes.html#types-set.\n",
+    "O Python fornece uma estrutura de dados chamada `set`, que fornece muitas operações de conjunto. Você pode ler sobre elas em “Conjuntos”, no Capítulo 19, ou ler a documentação em http://docs.python.org/3/library/stdtypes.html#types-set.\n",
     "\n",
     "Escreva um programa que use a subtração de conjuntos para encontrar palavras no livro que não estão na lista de palavras.\n",
     "\n",
