--- a/Capítulo 14 - Arquivos.ipynb
+++ b/Capítulo 14 - Arquivos.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "## 14.2 - Leitura e escrita\n",
     "\n",
-    "Um **arquivo de texto** é uma sequência de caracteres armazenados em um meio permanente como uma unidade de disco rígido, pendrive ou CD-ROM. Vimos como abrir e ler um arquivo em “Leitura de listas de palavras” na página 133.\n",
+    "Um **arquivo de texto** é uma sequência de caracteres armazenados em um meio permanente como uma unidade de disco rígido, pendrive ou CD-ROM. Vimos como abrir e ler um arquivo em “Leitura de listas de palavras” no Capítulo 9.\n",
     "\n",
     "Para escrever um arquivo de texto, é preciso abri-lo com o modo `'w'` como segundo parâmetro:"
    ]
