--- a/Capítulo 17 - Classes e métodos.ipynb
+++ b/Capítulo 17 - Classes e métodos.ipynb
@@ -36,7 +36,7 @@
     "</ul>\n",
     "<p>Nas próximas seções tomaremos as funções dos dois capítulos anteriores e as transformaremos em métodos. Essa transformação é puramente mecânica; você pode fazê-la seguindo uma série de passos. Se estiver à vontade para fazer a conversão entre uma forma e outra, sempre poderá escolher a melhor forma para contemplar os seus objetivos.</p>\n",
     "<h2><a id=\"user-content-172---exibição-de-objetos\" class=\"anchor\" aria-hidden=\"true\" href=\"#172---exibição-de-objetos\"><svg class=\"octicon octicon-link\" viewBox=\"0 0 16 16\" version=\"1.1\" width=\"16\" height=\"16\" aria-hidden=\"true\"><path fill-rule=\"evenodd\" d=\"M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z\"></path></svg></a>17.2 - Exibição de objetos</h2>\n",
-    "<p>No Capítulo 16 definimos uma classe chamada Time em “Time”, na página 231, e você escreveu uma função denominada <code>print_time</code>:</p>"
+    "<p>No Capítulo 16, definimos uma classe chamada Time em “Time”, na página 231, e você escreveu uma função denominada <code>print_time</code>:</p>"
    ]
   },
   {
@@ -186,9 +186,9 @@
     "</li>\n",
     "</ul>\n",
     "<p>Essa mudança de perspectiva pode ser mais polida, mas não é óbvio que seja útil. Nos exemplos que vimos até agora, pode não ser. Porém, às vezes, deslocar a responsabilidade das funções para os objetos permite escrever funções (ou métodos) mais versáteis e facilita a manutenção e reutilização do código.</p>\n",
-    "<p>Como exercício, reescreva <code>time_to_int</code> (de “Prototipação versus planejamento”, na página 234) como um método. Você pode ficar tentado a reescrever <code>int_to_time</code> como um método também, mas isso não faz muito sentido porque não haveria nenhum objeto sobre o qual invocá-lo.</p>\n",
+    "<p>Como exercício, reescreva <code>time_to_int</code> (de “Prototipação versus planejamento”, no Capítulo 16) como um método. Você pode ficar tentado a reescrever <code>int_to_time</code> como um método também, mas isso não faz muito sentido porque não haveria nenhum objeto sobre o qual invocá-lo.</p>\n",
     "<h2><a id=\"user-content-173---outro-exemplo\" class=\"anchor\" aria-hidden=\"true\" href=\"#173---outro-exemplo\"><svg class=\"octicon octicon-link\" viewBox=\"0 0 16 16\" version=\"1.1\" width=\"16\" height=\"16\" aria-hidden=\"true\"><path fill-rule=\"evenodd\" d=\"M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z\"></path></svg></a>17.3 - Outro exemplo</h2>\n",
-    "<p>Aqui está uma versão de <code>increment</code> (de “Modificadores”, na página 233) reescrita como método:</p>"
+    "<p>Aqui está uma versão de <code>increment</code> (de “Modificadores”, no Capítulo 16) reescrita como método:</p>"
    ]
   },
   {
@@ -281,7 +281,7 @@
    "source": [
     "<p><code>parrot</code> e <code>cage</code> são posicionais, e <code>dead</code> é um argumento de palavra-chave.</p>\n",
     "<h2><a id=\"user-content-174---um-exemplo-mais-complicado\" class=\"anchor\" aria-hidden=\"true\" href=\"#174---um-exemplo-mais-complicado\"><svg class=\"octicon octicon-link\" viewBox=\"0 0 16 16\" version=\"1.1\" width=\"16\" height=\"16\" aria-hidden=\"true\"><path fill-rule=\"evenodd\" d=\"M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z\"></path></svg></a>17.4 - Um exemplo mais complicado</h2>\n",
-    "<p>Reescrever <code>is_after</code> (de “Time”, na página 231) é ligeiramente mais complicado, porque ela recebe dois objetos <code>Time</code> como parâmetros. Nesse caso, a convenção é denominar o primeiro parâmetro <code>self</code> e o segundo parâmetro <code>other</code>:</p>"
+    "<p>Reescrever <code>is_after</code> (de “Time”, no Capítulo 16) é ligeiramente mais complicado, porque ela recebe dois objetos <code>Time</code> como parâmetros. Nesse caso, a convenção é denominar o primeiro parâmetro <code>self</code> e o segundo parâmetro <code>other</code>:</p>"
    ]
   },
   {
@@ -675,7 +675,7 @@
     "</ul>\n",
     "<h2><a id=\"user-content-179---polimorfismo\" class=\"anchor\" aria-hidden=\"true\" href=\"#179---polimorfismo\"><svg class=\"octicon octicon-link\" viewBox=\"0 0 16 16\" version=\"1.1\" width=\"16\" height=\"16\" aria-hidden=\"true\"><path fill-rule=\"evenodd\" d=\"M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z\"></path></svg></a>17.9 - Polimorfismo</h2>\n",
     "<p>O despacho por tipo é útil, mas (felizmente) nem sempre é necessário. Muitas vezes, você pode evitá-lo escrevendo funções que funcionem corretamente para argumentos de tipos diferentes.</p>\n",
-    "<p>Muitas das funções que escrevemos para strings também funcionam para outros tipos de sequência. Por exemplo, em “Um dicionário como uma coleção de contadores”, na página 163, usamos <code>histogram</code> para contar o número de vezes que cada letra aparece numa palavra:</p>"
+    "<p>Muitas das funções que escrevemos para strings também funcionam para outros tipos de sequência. Por exemplo, em “Um dicionário como uma coleção de contadores”, no Capítulo 11, usamos <code>histogram</code> para contar o número de vezes que cada letra aparece numa palavra:</p>"
    ]
   },
   {
@@ -767,7 +767,7 @@
     "<p>No entanto, se projetou a interface cuidadosamente, pode alterar a implementação sem mudar a interface, e não será preciso mudar outras partes do programa.</p>\n",
     "<h2><a id=\"user-content-1711---depuração\" class=\"anchor\" aria-hidden=\"true\" href=\"#1711---depuração\"><svg class=\"octicon octicon-link\" viewBox=\"0 0 16 16\" version=\"1.1\" width=\"16\" height=\"16\" aria-hidden=\"true\"><path fill-rule=\"evenodd\" d=\"M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z\"></path></svg></a>17.11 - Depuração</h2>\n",
     "<p>É legal acrescentar atributos a objetos em qualquer ponto da execução de um programa, mas se você tiver objetos do mesmo tipo que não têm os mesmos atributos, é fácil cometer erros. É uma boa ideia inicializar todos os atributos de um objeto no método init.</p>\n",
-    "<p>Caso não tenha certeza se um objeto tem um determinado atributo, você pode usar a função integrada <code>hasattr</code> (ver “Depuração”, na página 236).</p>\n",
+    "<p>Caso não tenha certeza se um objeto tem um determinado atributo, você pode usar a função integrada <code>hasattr</code> (ver “Depuração”, no Capítulo 15).</p>\n",
     "<p>Outra forma de acessar atributos é com a função integrada <code>vars</code>, que recebe um objeto e retorna um dicionário que mapeia os nomes dos atributos (como strings) aos seus valores:</p>"
    ]
   },
