--- a/Capítulo 18 - Herança.ipynb
+++ b/Capítulo 18 - Herança.ipynb
@@ -519,7 +519,7 @@
     "<h2><a id=\"user-content-189---encapsulamento-de-dados\" class=\"anchor\" aria-hidden=\"true\" href=\"#189---encapsulamento-de-dados\"><svg class=\"octicon octicon-link\" viewBox=\"0 0 16 16\" version=\"1.1\" width=\"16\" height=\"16\" aria-hidden=\"true\"><path fill-rule=\"evenodd\" d=\"M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z\"></path></svg></a>18.9 - Encapsulamento de dados</h2>\n",
     "<p>Os capítulos anteriores demonstram um plano de desenvolvimento que poderíamos chamar de “projeto orientado a objeto”. Identificamos os objetos de que precisamos – como <code>Point</code>, <code>Rectangle</code> e <code>Time</code> – e definimos classes para representá-los. Em cada caso há uma correspondência óbvia entre o objeto e alguma entidade no mundo real (ou, pelo menos, no mundo matemático).</p>\n",
     "<p>Mas, às vezes, é menos óbvio quais objetos você precisa e como eles devem interagir. Nesse caso é necessário um plano de desenvolvimento diferente. Da mesma forma em que descobrimos interfaces de função por encapsulamento e generalização, podemos descobrir interfaces de classe por <b>encapsulamento de dados</b>.</p>\n",
-    "<p>A análise de Markov, de “Análise de Markov”, na página 200, apresenta um bom exemplo. Se baixar o meu código em <a href=\"http://thinkpython2.com/code/markov.py\" rel=\"nofollow\">http://thinkpython2.com/code/markov.py</a>, você vai ver que ele usa duas variáveis globais – <code>suffix_map</code> e <code>prefix</code> – que são lidas e escritas a partir de várias funções.</p>"
+    "<p>A análise de Markov, de “Análise de Markov”, no Capítulo 13, apresenta um bom exemplo. Se baixar o meu código em <a href=\"http://thinkpython2.com/code/markov.py\" rel=\"nofollow\">http://thinkpython2.com/code/markov.py</a>, você vai ver que ele usa duas variáveis globais – <code>suffix_map</code> e <code>prefix</code> – que são lidas e escritas a partir de várias funções.</p>"
    ]
   },
   {
@@ -579,7 +579,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Transformar um programa como esse – alterando o projeto sem mudar o comportamento – é outro exemplo de refatoração (veja “Refatoração”, na página 70).</p>\n",
+    "<p>Transformar um programa como esse – alterando o projeto sem mudar o comportamento – é outro exemplo de refatoração (veja “Refatoração”, no Capítulo 4).</p>\n",
     "<p>Este exemplo sugere um plano de desenvolvimento para projetar objetos e métodos:</p>\n",
     "<ol>\n",
     "<li>\n",
