--- a/Capítulo 19 - Extra.ipynb
+++ b/Capítulo 19 - Extra.ipynb
@@ -9,7 +9,7 @@
     "<p>Uma das minhas metas com este livro é ensinar o mínimo possível de Python. Quando havia duas formas de fazer algo, escolhia uma e evitava mencionar a outra. Ou, às vezes, usava a segunda como exercício.</p>\n",
     "<p>Agora quero voltar a algumas coisas boas que ficaram para trás. O Python oferece vários recursos que não são realmente necessários – você pode escrever um bom código sem eles – mas com eles é possível escrever um código mais conciso, legível ou eficiente e, às vezes, todos os três.</p>\n",
     "<h2><a id=\"user-content-191---expressões-condicionais\" class=\"anchor\" aria-hidden=\"true\" href=\"#191---expressões-condicionais\"><svg class=\"octicon octicon-link\" viewBox=\"0 0 16 16\" version=\"1.1\" width=\"16\" height=\"16\" aria-hidden=\"true\"><path fill-rule=\"evenodd\" d=\"M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z\"></path></svg></a>19.1 - Expressões condicionais</h2>\n",
-    "<p>Vimos instruções condicionais em “Execução condicional”, na página 78. As instruções condicionais muitas vezes são usadas para escolher um entre dois valores; por exemplo:</p>"
+    "<p>Vimos instruções condicionais em “Execução condicional”, no Capítulo 5. As instruções condicionais muitas vezes são usadas para escolher um entre dois valores; por exemplo:</p>"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "source": [
     "<p>Em geral, é possível substituir uma instrução condicional por uma expressão condicional se ambos os ramos contiverem expressões simples que sejam retornadas ou atribuídas à mesma variável.</p>\n",
     "<h2><a id=\"user-content-192---abrangência-de-listas\" class=\"anchor\" aria-hidden=\"true\" href=\"#192---abrangência-de-listas\"><svg class=\"octicon octicon-link\" viewBox=\"0 0 16 16\" version=\"1.1\" width=\"16\" height=\"16\" aria-hidden=\"true\"><path fill-rule=\"evenodd\" d=\"M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z\"></path></svg></a>19.2 - Abrangência de listas</h2>\n",
-    "<p>Em “Mapeamento, filtragem e redução”, na página 147, vimos os padrões de filtragem e mapeamento. Por exemplo, esta função toma uma lista de strings, mapeia o método de string capitalize aos elementos, e retorna uma nova lista de strings:</p>"
+    "<p>Em “Mapeamento, filtragem e redução”, no Capítulo 10, vimos os padrões de filtragem e mapeamento. Por exemplo, esta função toma uma lista de strings, mapeia o método de string capitalize aos elementos, e retorna uma nova lista de strings:</p>"
    ]
   },
   {
@@ -405,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Esse exemplo não é muito útil porque faz a mesma coisa que o operador <code>in</code>. Porém, podemos usar <code>any</code> para reescrever algumas das funções de pesquisa que escrevemos em “Busca”, na página 136. Por exemplo, poderíamos escrever <code>avoids</code> dessa forma:</p>"
+    "<p>Esse exemplo não é muito útil porque faz a mesma coisa que o operador <code>in</code>. Porém, podemos usar <code>any</code> para reescrever algumas das funções de pesquisa que escrevemos em “Busca”, no Capítulo 9. Por exemplo, poderíamos escrever <code>avoids</code> dessa forma:</p>"
    ]
   },
   {
@@ -423,9 +423,9 @@
    "source": [
     "<p>A função quase pode ser lida como uma frase em inglês: <i>“word evita forbidden se não houver nenhuma letra proibida em word”</i>.</p>\n",
     "<p>Usar <code>any</code> com uma expressão geradora é eficiente porque ela retorna imediatamente se encontrar um valor <code>True</code>, então não é preciso avaliar a sequência inteira.</p>\n",
-    "<p>O Python oferece outra função integrada, <code>all</code>, que retorna <code>True</code> se todos os elementos da sequência forem <code>True</code>. Como exercício, use <code>all</code> para reescrever <code>uses_all</code> de “Busca”, na página 136.</p>\n",
+    "<p>O Python oferece outra função integrada, <code>all</code>, que retorna <code>True</code> se todos os elementos da sequência forem <code>True</code>. Como exercício, use <code>all</code> para reescrever <code>uses_all</code> de “Busca”, no Capítulo 9.</p>\n",
     "<h2><a id=\"user-content-195---conjuntos\" class=\"anchor\" aria-hidden=\"true\" href=\"#195---conjuntos\"><svg class=\"octicon octicon-link\" viewBox=\"0 0 16 16\" version=\"1.1\" width=\"16\" height=\"16\" aria-hidden=\"true\"><path fill-rule=\"evenodd\" d=\"M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z\"></path></svg></a>19.5 - Conjuntos</h2>\n",
-    "<p>Na seção “Subtração de dicionário”, da página 198, uso dicionários para encontrar as palavras que aparecem em um documento, mas não numa lista de palavras. A função que escrevi recebe <code>d1</code>, que contém as palavras do documento como chaves e <code>d2</code>, que contém a lista de palavras. Ela retorna um dicionário que contém as chaves de <code>d1</code> que não estão em <code>d2</code>:</p>"
+    "<p>Na seção “Subtração de dicionário”, do Capítulo 13, uso dicionários para encontrar as palavras que aparecem em um documento, mas não numa lista de palavras. A função que escrevi recebe <code>d1</code>, que contém as palavras do documento como chaves e <code>d2</code>, que contém a lista de palavras. Ela retorna um dicionário que contém as chaves de <code>d1</code> que não estão em <code>d2</code>:</p>"
    ]
   },
   {
@@ -976,7 +976,7 @@
    "source": [
     "<p>Ou poderá mudar para uma definição de classe convencional.</p>\n",
     "<h2><a id=\"user-content-199---reunindo-argumentos-de-palavra-chave\" class=\"anchor\" aria-hidden=\"true\" href=\"#199---reunindo-argumentos-de-palavra-chave\"><svg class=\"octicon octicon-link\" viewBox=\"0 0 16 16\" version=\"1.1\" width=\"16\" height=\"16\" aria-hidden=\"true\"><path fill-rule=\"evenodd\" d=\"M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z\"></path></svg></a>19.9 - Reunindo argumentos de palavra-chave</h2>\n",
-    "<p>Em “Tuplas com argumentos de comprimento variável”, na página 181, vimos como escrever uma função que reúne seus argumentos em uma tupla:</p>"
+    "<p>Em “Tuplas com argumentos de comprimento variável”, no Capítulo 12, vimos como escrever uma função que reúne seus argumentos em uma tupla:</p>"
    ]
   },
   {
@@ -1189,7 +1189,7 @@
    "metadata": {},
    "source": [
     "<p>Reescreva o corpo da função usando expressões condicionais aninhadas.</p>\n",
-    "<p>Uma observação: esta função não é muito eficiente porque acaba calculando os mesmos valores várias vezes. Você pode torná-lo mais eficiente com memos (veja “Memos”, na página 169). No entanto, vai ver que é mais difícil usar memos se escrevê-la usando expressões condicionais.</p>"
+    "<p>Uma observação: esta função não é muito eficiente porque acaba calculando os mesmos valores várias vezes. Você pode torná-lo mais eficiente com memos (veja “Memos”, no Capítulo 11). No entanto, vai ver que é mais difícil usar memos se escrevê-la usando expressões condicionais.</p>"
    ]
   }
  ],
