--- a/B-Análise de Algoritmos.ipynb
+++ b/B-Análise de Algoritmos.ipynb
@@ -169,7 +169,7 @@
     "<p><code>keys</code>, <code>values</code> e <code>items</code> são de tempo constante porque retornam iteradores. Porém, se fizer um <i>loop</i> pelos iteradores, o <i>loop</i> será linear.</p>\n",
     "</li>\n",
     "</ul>\n",
-    "<p>O desempenho de dicionários é um dos milagres menores da ciência da computação. Vemos como funcionam em “<i>Hashtables</i>”, na página 302.</p>\n",
+    "<p>O desempenho de dicionários é um dos milagres menores da ciência da computação. Vemos como funcionam em “<i>Hashtables</i>”, no item B.4.</p>\n",
     "<h3><a id=\"user-content-exercício-b2\" class=\"anchor\" aria-hidden=\"true\" href=\"#exercício-b2\"><svg class=\"octicon octicon-link\" viewBox=\"0 0 16 16\" version=\"1.1\" width=\"16\" height=\"16\" aria-hidden=\"true\"><path fill-rule=\"evenodd\" d=\"M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z\"></path></svg></a>Exercício B.2</h3>\n",
     "<p>Leia a página da Wikipédia sobre algoritmos de ordenação em <a href=\"http://en.wikipedia.org/wiki/Sorting%5Falgorithm\" rel=\"nofollow\">http://en.wikipedia.org/wiki/Sorting_algorithm</a> e responda às seguintes perguntas:</p>\n",
     "<p>1. O que é um “tipo de comparação”? Qual é a melhor opção nos casos de pior cenário de ordem de crescimento para um tipo de comparação? Qual é a melhor opção nos casos de pior cenário de ordem de crescimento para qualquer algoritmo de ordenação?</p>\n",
